# humaein1

./: .pre-commit-config.yaml  LICENSE  Makefile
.github/workflows/: ci.yml
app/backend/: Dockerfile  README.md  claims.db  pyproject.toml
app/backend/app/: __main__.py  classifier.py  config.py  core.py  db.py  devserver.py  logging.py  main.py  metrics.py  models.py  pipeline.py  recommendations.py  schemas.py  utils_normalize.py
app/backend/app/data/: resubmission_candidates.json
app/backend/app/routers/: __init__.py  datasets.py  metrics.py  pipeline.py  reclassify.py
app/backend/app/scripts/: seed.py
app/backend/artifacts/: resubmission_candidates.json  resubmission_metrics.json
app/backend/tests/: test_classifier.py
app/data/: sample_alpha.csv  sample_beta.json
app/frontend/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
app/frontend/src/: App.tsx  index.css  main.tsx
app/frontend/src/lib/: api.ts
app/frontend/src/views/: DatasetDetailsPage.tsx  DatasetsPage.tsx  UploadPage.tsx
app/ops/: compose.yml
